merubah 1 halaman yaitu jawaban

--- a/kalkulator.html
+++ b/kalkulator.html
@@ -17,7 +17,7 @@
   <script>
     function cekJawaban() {
       const jawaban = document.getElementById('jawaban').value.toLowerCase().trim();
-      if (jawaban === 'syelly') {
+      if (jawaban === 'sebelumpulangyasyelly') {
         window.location.href = "sahabatku.html";
       } else {
         alert("Coba lagi ya 😁");
